<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linGeneral"
    android:layout_width="match_parent"
    android:background="@drawable/side_nav_bar"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lblTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/menu_change_password"
        android:textColor="@color/white"
        android:background="@color/colorPrimaryDark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/password"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_alignParentLeft="true"
            android:scaleType="centerInside"
            android:src="@drawable/ic_logo"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnSend"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:text="@string/change"
            android:background="@color/colorAccent"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:gravity="center"
            style="?android:attr/buttonStyleSmall"/>



    </RelativeLayout>

</LinearLayout>

